service base implementation and formating the code with google formatter

--- a/tmaxx-fin-rest/src/main/resources/messages_tr_TR.properties
+++ b/tmaxx-fin-rest/src/main/resources/messages_tr_TR.properties
@@ -1,4 +1,5 @@
 #Accounting Plan Service
+GENERAL.NOT_FOUND=Seçilen kayit sistemde bulunamadı.
 ACCOUNTINGPLAN.CAN_NOT_CREATE_PARENT_ACCOUNT=Yeni bir ana hesap oluşturulamaz.
 ACCOUNTINGPLAN.CAN_CREATE_ACCOUNT_FOR_RECEIPT_ACCOUNT=Fiş kesilen hesabın alt hesabı olamaz.
 ACCOUNTINGPLAN.FIRM_NOT_FOUND=Hesap listesi istenen şirket sistemde kayıtlı değil.
